[project]
name = "portfolio-optmization"
version = "0.1.0"
description = ""
authors = [
    {name = "0b10n3",email = "silvasmath@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "streamlit (>=1.45.0,<2.0.0)",
    "yfinance (>=0.2.58,<0.3.0)",
    "pandas (>=2.2.3,<3.0.0)",
    "numpy (>=2.2.5,<3.0.0)",
    "plotly (>=6.0.1,<7.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
